# ts_lib_module_root_bug

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  index.ts  module_type.bzl  package-lock.json  package.json  webpack.config.ts  webpack_bundle.bzl
